Add Booking Functionality and Add Lesson Page Design

--- a/WebContent/search-tutor.html
+++ b/WebContent/search-tutor.html
@@ -393,7 +393,7 @@
                 </div>
             </div>
         </section>
-        <div class="main__form_overlayform search__booking" tabindex="-1" style="display: flex;">
+        <div class="main__form_overlayform" tabindex="-1" style="display: flex;">
             <a href="#" class="main__form_overlayform_cross" onclick="hideOverlayForm()">X</a>
             <h2 class="main__sub-heading">Payment</h2>
             <div class="search__booking_walletDiv">
