Add Lesson fetch code

--- a/WebContent/lessons.html
+++ b/WebContent/lessons.html
@@ -243,6 +243,7 @@
                 <option value="Completed">Completed</option>
                 <option value="Scheduled">Scheduled</option>
                 <option value="Unscheduled">Unscheduled</option>
+                <option value="Cancelled">Cancelled</option>
             </select>
             <div class="main__dashboard-container">
                 <div class="main__tile main__lesson_tile">
