Add Tutor Profile

--- a/WebContent/tutor-profile.html
+++ b/WebContent/tutor-profile.html
@@ -185,18 +185,130 @@
                     </div>
                     <div class="search__result_about">
                         <p class="search__result_about_name">Mohd Shariq</p>
-                        <p class="search__result_about_info"><span class="location_icon"></span>Delhi | 10 Students | 24 Lessons</p>
-                        <p class="search__result_about_sub-heading">Teaches</p>
-                        <p class="search__result_about_details">English, Discrete Mathematics, C++ and more</p>
+                        <p class="search__result_about_info">Delhi</p>
                         <p class="search__result_about_sub-heading">Speaks</p>
                         <p class="search__result_about_details">Hindi English Urdu</p>
-                        <p class="search__result_about_sub-heading">About</p>
-                        <p class="search__result_about_details">A BCA student with diploma in computer engineering and love for teaching.</p>
+                        <p class="search__result_about_sub-heading">Hourly Rate</p>
+                        <p class="search__result_about_details">₹500 - ₹800</p>
                     </div>
+                </div>
+                <div class="profile__body">
+                    <section class="profile__body_about">
+                        <h2 class="profile__body_about_heading">About Mohd Shariq</h2>
+                        <p class="profile__body_about_text">
+                            I graduated from Kennedy King College with an Associate’s Degree in Liberal Arts and an
+                            Associate’s Degree in Applied Science, with a specialization in accounting. My GPA was 3.50.
+                            I
+                            now attend Chicago State University where I am pursuing Bachelors of Science degree in
+                            Business
+                            and Administration. My GPA is 3.75 and I will be graduating in December 2022.
+                        </p>
+                    </section>
+                    <section class="profile__body_fees">
+                        <h2>Lesson Prices</h2>
+                        <table class="white-table">
+                            <thead>
+                                <th>Subject Name</th>
+                                <th>Price (1 Hr)</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>BCS-011 - Computer Basics and PC Software</td>
+                                    <td> ₹800</td>
+                                </tr>
+                                <tr>
+                                    <td>BCS-011 - Computer Basics and PC Software</td>
+                                    <td> ₹800</td>
+                                </tr>
+                                <tr>
+                                    <td>BCS-011 - Computer Basics and PC Software</td>
+                                    <td> ₹800</td>
+                                </tr>
+                                <tr>
+                                    <td>BCS-011 - Computer Basics and PC Software</td>
+                                    <td> ₹800</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </section>
+                    <section class="profile__body_avail">
+                        <h2>Weekly Availability</h2>
+                        <table class="white-table">
+                            <thead>
+                                <th>Day</th>
+                                <th>From</th>
+                                <th>To</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Monday</td>
+                                    <td class="dynamic" id="time_from_day_1">06:00 PM</td>
+                                    <td class="dynamic" id="time_to_day_1">10:00 PM</td>
+                                </tr>
+                                <tr>
+                                    <td>Tuesday</td>
+                                    <td class="dynamic" id="time_from_day_2">06:00 PM</td>
+                                    <td class="dynamic" id="time_to_day_2">10:00 PM</td>
+                                </tr>
+                                <tr>
+                                    <td>Wednesday</td>
+                                    <td class="dynamic" id="time_from_day_3">06:00 PM</td>
+                                    <td class="dynamic" id="time_to_day_3">10:00 PM</td>
+                                </tr>
+                                <tr>
+                                    <td>Thursday</td>
+                                    <td class="dynamic" id="time_from_day_4">06:00 PM</td>
+                                    <td class="dynamic" id="time_to_day_4">10:00 PM</td>
+                                </tr>
+                                <tr>
+                                    <td>Friday</td>
+                                    <td class="dynamic" id="time_from_day_5">06:00 PM</td>
+                                    <td class="dynamic" id="time_to_day_5">10:00 PM</td>
+                                </tr>
+                                <tr>
+                                    <td>Saturday</td>
+                                    <td class="dynamic" id="time_from_day_6">09:00 AM</td>
+                                    <td class="dynamic" id="time_to_day_6">10:00 PM</td>
+                                </tr>
+                                <tr>
+                                    <td>Sunday</td>
+                                    <td class="dynamic" id="time_from_day_7">09:00 AM</td>
+                                    <td class="dynamic" id="time_to_day_7">10:00 PM</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </section>
+                    <section class="profile__body_exps">
+                        <h2>Education & Experiences</h2>
+                        <div class="profile__body_exps_edu">
+                            <h3>Education</h3>
+                            <h4 class="profile__body_exps_title">BCA</h4>
+                            <p>
+                                <span class="profile__body_exps_inst">Indira Gandhi Open National University</span>
+                                <span class="profile__body_exps_location">Delhi</span>
+                                <span class="profile__body_exps_period">2019 - 2022</span>
+                                <span class="profile__body_exps_desc">Completed BCA from IGNOU.</span>
+                            </p>
+                            <h4 class="profile__body_exps_title">MCA</h4>
+                            <p>
+                                <span class="profile__body_exps_inst">Indira Gandhi Open National University</span>
+                                <span class="profile__body_exps_location">Delhi</span>
+                                <span class="profile__body_exps_period">2019 - 2022</span>
+                                <span class="profile__body_exps_desc">Completed MCA from IGNOU.</span>
+                            </p>
+                        </div>
+                        <div class="profile__body_exps_work">
+                            <h3>Experiences</h3>
+                        </div>
+                        <div class="profile__body_exps_cert">
+                            <h3>Certifications</h3>
+                        </div>
+                    </section>
                 </div>
             </div>
             <div class="profile__buttons">
-
+                <button class="flat-button-filled">Book Now</button>
+                <button class="flat-button-hallow">Check Availability </button>
             </div>
         </div>
     </main>
