--- a/WebContent/Admin/index.html
+++ b/WebContent/Admin/index.html
@@ -113,168 +113,124 @@
         <div id="snackbar"><span></span></div>
     </section>
     <main class="main">
-        <div class="overlaydiv">
-            <div id="btnCross" class="header__menu cross">
-                <span></span>
-                <span></span>
-                <span></span>
+        <div class="dashboard">
+            <div class="dashboard__tile">
+                <div class="dashboard__tile_img">
+                    <img src="../images/rupee.png" alt="" srcset="">
+                </div>
+                <div class="dashboard__tile_info">
+                    <span class="dashboard__tile_title">Total Sales</span>
+                    <span class="dashboard__tile_num">&#8377; 10</span>
+                </div>
             </div>
-            <h1 class="main__heading">Subjects</h1>
-            <div class="main__table scrollable">
-                <table aria-label="Course Preview">
+            <div class="dashboard__tile">
+                <div class="dashboard__tile_img">
+                    <img src="../images/income.png" alt="" srcset="">
+                </div>
+                <div class="dashboard__tile_info">
+                    <span class="dashboard__tile_title">Admin Profit</span>
+                    <span class="dashboard__tile_num">&#8377; 10</span>
+                </div>
+            </div>
+            <div class="dashboard__tile">
+                <div class="dashboard__tile_img">
+                    <img src="../images/group.png" alt="" srcset="">
+                </div>
+                <div class="dashboard__tile_info">
+                    <span class="dashboard__tile_title">Total Users</span>
+                    <span class="dashboard__tile_num">10</span>
+                </div>
+            </div>
+            <div class="dashboard__tile">
+                <div class="dashboard__tile_img">
+                    <img src="../images/group.png" alt="" srcset="">
+                </div>
+                <div class="dashboard__tile_info">
+                    <span class="dashboard__tile_title">Tutors</span>
+                    <span class="dashboard__tile_num">10</span>
+                </div>
+            </div>
+            <div class="dashboard__tile dashboard__big-tile">
+                <div class="dashboard__tile_img">
+                    <img src="../images/marketplace-vector.svg" style="filter: invert(1);" alt="" srcset="">
+                </div>
+                <div class="dashboard__tile_info">
+                    <div>
+                        <span class="dashboard__tile_title">Total Bookings</span>
+                        <span class="dashboard__tile_num">10</span>
+                    </div>
+                    <div>
+                        <span class="dashboard__tile_title">Total Lessons Sold</span>
+                        <span class="dashboard__tile_num">10</span>
+                    </div>
+                </div>
+            </div>
+            <div class="dashboard__tile dashboard__big-tile">
+                <div class="dashboard__tile_img">
+                    <img src="../images/document.png" alt="" srcset="">
+                </div>
+                <div class="dashboard__tile_info">
+                    <div>
+                        <span class="dashboard__tile_title">Scheduled Lessons</span>
+                        <span class="dashboard__tile_num">10</span>
+                    </div>
+                    <div>
+                        <span class="dashboard__tile_title">Completed Lessons</span>
+                        <span class="dashboard__tile_num">10</span>
+                    </div>
+                </div>
+            </div>
+            <div class="dashboard__tile dashboard__big-tile dashboard__big-tile_block">
+                <table>
+                    <caption>Recent Bookings</caption>
                     <thead>
+                        <th>ID</th>
+                        <th>Details</th>
+                        <th>Users</th>
+                        <th>Amount</th>
+                    </thead>
+                    <tbody>
                         <tr>
-                            <th scope="...">S.No.</th>
-                            <th scope="...">Year/Sem</th>
-                            <th scope="...">Subject Name</th>
-                            <th scope="...">Subject Code</th>
-                            <th scope="...">Action</th>
+                            <td>1</td>
+                            <td>Basic Mathematics<br>2 Hr<br>Lessons: 2 </td>
+                            <td>Student: Mohd Shariq<br>Tutor: Mohd Shariq</td>
+                            <td>&#8377; 10</td>
                         </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Basic Mathematics<br>2 Hr<br>Lessons: 2 </td>
+                            <td>Student: Mohd Shariq<br>Tutor: Mohd Shariq</td>
+                            <td>&#8377; 10</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Basic Mathematics<br>2 Hr<br>Lessons: 2 </td>
+                            <td>Student: Mohd Shariq<br>Tutor: Mohd Shariq</td>
+                            <td>&#8377; 10</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="dashboard__tile dashboard__big-tile dashboard__big-tile_block">
+                <table>
+                    <caption>Recent Completed Lessons</caption>
+                    <thead>
+                        <th>ID</th>
+                        <th>Details</th>
+                        <th>Users</th>
+                        <th>Status</th>
                     </thead>
                     <tbody>
 
                     </tbody>
                 </table>
+                <p>No Lessons Found</p>
             </div>
         </div>
-        <h1 class="main__heading">Add Course</h1>
-        <form action="#" method="POST" class="main__form">
-            <span class="caption">Enter Course Details</span>
-            <div class="form_group">
-                <label for="course_name">Course Name</label>
-                <input type="text" name="course_name" id="course_name" required placeholder="Enter course name ">
-            </div>
-            <div class="form_group">
-                <label for="name_abbr">Course Name Abbrivation</label>
-                <input type="text" name="name_abbr" id="name_abbr" required placeholder="Enter abbrivation e.g. BCA">
-            </div>
-            <div class="form_group">
-                <label for="duration_type">Duration Type</label>
-                <select name="duration_type" id="duration_type">
-                    <option value="default" selected disabled>Select duration type</option>
-                    <option value="year">Year</option>
-                    <option value="sem">Semester</option>
-                </select>
-            </div>
-            <div class="form_group">
-                <label for="duration">Duration</label>
-                <input type="number" name="duration" id="duration" required placeholder="Enter course duration e.g. 6">
-            </div>
-            <div class="form_group form_group_submit">
-                <input type="submit" class="button flat-wide-button" value="Add Course">
-            </div>
-        </form>
-        <div class="main__preview">
-            <a href="#" class="button float-right-btn">See All Courses >></a>
-            <table aria-label="Course Preview">
-                <caption> Recent Entries </caption>
-                <thead>
-                    <tr>
-                        <th scope="...">S.No.</th>
-                        <th scope="...">Course Name</th>
-                        <th scope="...">Name Abbr</th>
-                        <th scope="...">Duration Type</th>
-                        <th scope="...">Duration</th>
-                        <th scope="...">Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Bachelor Of Computer Application</td>
-                        <td>BCA</td>
-                        <td>Semester</td>
-                        <td>6</td>
-                        <td class="main__preview_action">
-                            <a href="#" class="button small-round-button edit-button">Edit</a>
-                            <a href="#" class="button small-round-button delete-button">Delete</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Bachelor Of Computer Application</td>
-                        <td>BCA</td>
-                        <td>Semester</td>
-                        <td>6</td>
-                        <td class="main__preview_action">
-                            <a href="#" class="button small-round-button edit-button">Edit</a>
-                            <a href="#" class="button small-round-button delete-button">Delete</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="main__preview main__table">
-            <table aria-label="Course Data">
-                <caption> Recent Entries </caption>
-                <thead>
-                    <tr>
-                        <th scope="...">S.No.</th>
-                        <th scope="...">Course Name</th>
-                        <th scope="...">Name Abbr</th>
-                        <th scope="...">Duration Type</th>
-                        <th scope="...">Duration</th>
-                        <th scope="...">Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Bachelor Of Computer Application</td>
-                        <td>BCA</td>
-                        <td>Semester</td>
-                        <td>6</td>
-                        <td class="main__preview_action">
-                            <a href="#" class="button small-round-button edit-button">Edit</a>
-                            <a href="#" class="button small-round-button delete-button">Delete</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Bachelor Of Computer Application</td>
-                        <td>BCA</td>
-                        <td>Semester</td>
-                        <td>6</td>
-                        <td class="main__preview_action">
-                            <a href="#" class="button small-round-button edit-button">Edit</a>
-                            <a href="#" class="button small-round-button delete-button">Delete</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <form action="#" method="POST" class="main__form main__form_wide">
-            <span class="caption">Enter Course Details</span>
-            <div class="form_group">
-                <label for="course_name">Course Name</label>
-                <input type="text" name="course_name" id="course_name" required placeholder="Enter course name ">
-            </div>
-            <div class="form_group">
-                <label for="name_abbr">Course Name Abbrivation</label>
-                <input type="text" name="name_abbr" id="name_abbr" required placeholder="Enter abbrivation e.g. BCA">
-            </div>
-            <div class="form_group">
-                <label for="duration_type">Duration Type</label>
-                <select name="duration_type" id="duration_type">
-                    <option value="default" selected disabled>Select duration type</option>
-                    <option value="year">Year</option>
-                    <option value="sem">Semester</option>
-                </select>
-            </div>
-            <div class="form_group">
-                <label for="duration">Duration</label>
-                <input type="number" name="duration" id="duration" required placeholder="Enter course duration e.g. 6">
-            </div>
-            <div class="form_group form_group_submit">
-                <input type="submit" class="button flat-wide-button" value="Add Course">
-            </div>
-        </form>
     </main>
     <footer>
 
     </footer>
-    <span onclick="showLoading()">Show</span>
-    <span onclick="hideLoading()">Hide</span>
 </body>
 <script src="../app/js/admin-script.js">
 
